--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,11 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic|Source+Code+Pro:400");
 
+.highlight {
+    font-weight: normal;
+    color: #3897a0;
+}
+
 /*
 	Read Only by HTML5 UP
 	html5up.net | @ajlkn
@@ -2684,6 +2689,75 @@ input, select, textarea {
 			.features article .inner > :last-child {
 				margin-bottom: 0;
 			}
+
+/* Project */
+	.project-container {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		margin: -1.125em; /* To counteract default padding on projects */
+	}
+
+	.project {
+		border-top: solid 3px #f4f4f4;
+		padding: 1.125em; /* Restore default padding */
+		flex-basis: calc(50% - 1.125em); /* Adjust flex basis for two-column layout */
+		margin-bottom: 2.25em;
+		background-color: #f4f4f4;
+		display: flex; /* Add display flex */
+		flex-direction: column; /* Stack content vertically */
+		justify-content: space-between; /* Distribute content evenly */
+		text-align: center;
+	}
+	
+	.project-link {
+		text-decoration: underline; /* Remove default underline */
+		color: #184e64; /* Set link color to blue */
+		transition: color 0.2s; /* Add smooth color transition on hover */
+	}
+	
+	.project-link:hover {
+		text-decoration: none; /* Remove underline on hover */
+	}
+/* Work Experience */
+	/* #work-experience {
+		background-color: #f9f9f9;
+	}
+
+	.experience {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.job {
+		margin-bottom: 2em;
+		padding: 1.5em;
+		background-color: #fff;
+		box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+	}
+
+	.job h4 {
+		margin: 0 0 0.5em 0;
+		font-size: 1.25em;
+	}
+
+	.job p {
+		margin: 0;
+		color: #777;
+		font-size: 0.9em;
+	}
+
+	.job ul {
+		list-style: disc;
+		margin-left: 1.5em;
+		padding-left: 0.5em;
+	}
+
+	.job li {
+		margin-bottom: 0.5em;
+		font-size: 0.9em;
+		line-height: 1.4;
+	} */
 
 /* Header */
 
