--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,15 +8,21 @@
 
 .contact-icons {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 30px;
-	text-decoration: none;
+    gap: 35px;
 }
 
-.icon-link{
-    text-decoration: underline;
-    display: inline-block; /* This helps remove any extra spacing or line height */
+.icon {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+}
+
+.icon-text {
+    margin-top: 1px;
 }
 
 /*
